# novel-set-neat

./: .gitignore  Cargo.toml
src/: lib.rs  parameters.rs  population.rs
src/genes/: connections.rs  mod.rs  weights.rs
src/individual/: genome.rs  mod.rs  scores.rs
src/runtime/: evaluation.rs  mod.rs  progress.rs
src/statistics/: mod.rs
src/utility/: favannat_impl.rs  gym.rs  mod.rs  statistics.rs
