[package]
name = "novel-set-neat"
version = "0.1.0"
authors = ["Silvan Buedenbender <silvan@claiv.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7.3", features = [ "small_rng" ] }
rand_distr = "0.2"
config = "0.9"
ndarray = { version = "0.13.0", features = ["serde"] }
gym = { path = "../gym-rs" }
rayon = "1.3"
favannat = { path = "../favannat" }

[dev-dependencies]
gym = { path = "../gym-rs" }
criterion = "0.3"
log = "0.4.11"
log4rs = "0.13.0"
serde_json = "1.0"
